Agregando el nuevo footer al trabajo

--- a/index.html
+++ b/index.html
@@ -435,148 +435,20 @@
             </div>
     </div>
         </section>
-        <!-- <section class="img">
-            <img src="./media/aamon.jpg">
-            <img src="./media/akai.jpg">
-            <img src="./media/aldous.jpg">
-            <img src="./media/alice.jpg">
-            <img src="./media/alpha.jpg">
-            <img src="./media/alucard.jpg">
-            <img src="./media/angela.jpg">
-            <img src="./media/argus.jpg">
-            <img src="./media/arlott.jpg">
-            <img src="./media/atlas.jpg">
-            <img src="./media/aulus.jpg">
-            <img src="./media/aurora.jpg">
-            <img src="./media/badang.jpg">
-            <img src="./media/balmond.jpg">
-            <img src="./media/bane.jpg">
-            <img src="./media/barats.jpg">
-            <img src="./media/baxia.jpg">
-            <img src="./media/beatrix.jpg">
-            <img src="./media/belerick.jpg">
-            <img src="./media/benedetta.jpg">
-            <img src="./media/brody.jpg">
-            <img src="./media/bruno.jpg">
-            <img src="./media/carmilla.jpg">
-            <img src="./media/cecilon.jpg">
-            <img src="./media/change.jpg">
-            <img src="./media/chou.jpg">
-            <img src="./media/claude.jpg">
-            <img src="./media/clint.jpg">
-            <img src="./media/cyclops.jpg">
-            <img src="./media/diggie.jpg">
-            <img src="./media/dyrroth.jpg">
-            <img src="./media/edith.jpg">
-            <img src="./media/esmeralda.jpg">
-            <img src="./media/estes.jpg">
-            <img src="./media/eudora.jpg">
-            <img src="./media/fanny.jpg">
-            <img src="./media/faramis.jpg">
-            <img src="./media/floryn.jpg">
-            <img src="./media/franco.jpg">
-            <img src="./media/fredrinn.jpg">
-            <img src="./media/freya.jpg">
-            <img src="./media/gatotkaca.jpg">
-            <img src="./media/gloo.jpg">
-            <img src="./media/gord.jpg">
-            <img src="./media/granger.jpg">
-            <img src="./media/grock.jpg">
-            <img src="./media/guinevere.jpg">
-            <img src="./media/gusion.jpg">
-            <img src="./media/hanabi.jpg">
-            <img src="./media/hanzo.jpg">
-            <img src="./media/harith.jpg">
-            <img src="./media/harley.jpg">
-            <img src="./media/hayabusa.jpg">
-            <img src="./media/helcurt.jpg">
-            <img src="./media/hylos.jpg">
-            <img src="./media/irithel.jpg">
-            <img src="./media/jawhead.jpg">
-            <img src="./media/johnson.jpg">
-            <img src="./media/joy.jpg">
-            <img src="./media/julian.jpg">
-            <img src="./media/kadita.jpg">
-            <img src="./media/kagura.jpg">
-            <img src="./media/kaja.jpg">
-            <img src="./media/karina.jpg">
-            <img src="./media/khaleed.jpg">
-            <img src="./media/khufra.jpg">
-            <img src="./media/kimmy.jpg">
-            <img src="./media/lancelot.jpg">
-            <img src="./media/lapu-lapu.jpg">
-            <img src="./media/layla.jpg">
-            <img src="./media/leomord.jpg">
-            <img src="./media/lesley.jpg">
-            <img src="./media/ling.jpg">
-            <img src="./media/lolita.jpg">
-            <img src="./media/lunox.jpg">
-            <img src="./media/luo-yi.jpg">
-            <img src="./media/lylia.jpg">
-            <img src="./media/martis.jpg">
-            <img src="./media/masha.jpg">
-            <img src="./media/mathilda.jpg">
-            <img src="./media/melissa.jpg">
-            <img src="./media/minotaur.jpg">
-            <img src="./media/minsittar.jpg">
-            <img src="./media/miya.jpeg">
-            <img src="./media/moskov.jpg">
-            <img src="./media/nana.jpg">
-            <img src="./media/natalia.jpg">
-            <img src="./media/natan.jpg">
-            <img src="./media/novaria.jpg">
-            <img src="./media/odette.jpg">
-            <img src="./media/paquito.jpg">
-            <img src="./media/pharsa.jpg">
-            <img src="./media/phoveus.jpg">
-            <img src="./media/popol-y-kupa.jpg">
-            <img src="./media/rafaela.jpg">
-            <img src="./media/roger.jpg">
-            <img src="./media/ruby.jpg">
-            <img src="./media/saber.jpg">
-            <img src="./media/selena.jpg">
-            <img src="./media/silvanna.jpg">
-            <img src="./media/sun.jpg">
-            <img src="./media/terizla.jpg">
-            <img src="./media/thamuz.jpg">
-            <img src="./media/tigreal.jpg">
-            <img src="./media/uranus.jpg">
-            <img src="./media/vale.jpg">
-            <img src="./media/valentina.jpg">
-            <img src="./media/valir.jpg">
-            <img src="./media/vexana.jpg">
-            <img src="./media/wan-wan.jpg">
-            <img src="./media/xavier.jpg">
-            <img src="./media/x-borg.jpg">
-            <img src="./media/yin.jpg">
-            <img src="./media/yi-sun-shin.jpg">
-            <img src="./media/yu-zhong.jpg">
-            <img src="./media/yve.jpg">
-            <img src="./media/zhask.jpg">
-            <img src="./media/zilong.jpg">
-            <img src="./media/hilda.jpg">
-            <img src="./media/karrie.jpg">
-
-        </section> -->
     </main>
 
 
 <!-- FOOTER -->
 <footer>
-    <div class="footer-content">
-        <h3>MOBILE LEGENDS</h3>
-        <ul class="social">
-            <li><a href="https://www.facebook.com/MobileLegendsGameES" target="_blank"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="https://twitter.com/MobileLegendsOL" target="_blank"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="https://www.instagram.com/mobilelegendsgame/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="https://www.tiktok.com/@mlbbttofficial?lang=en" target="_blank"><i class="fab fa-tiktok"></i></a></li>
-            <li><a href="https://m.mobilelegends.com/en" target="_blank"><i class="fa-solid fa-globe"></i></a></li>
-        </ul>
+    <h3 class="juego"><a href="./index.html">MOBILE LEGENDS</a></h3>
+    <div class="contenedor-redes">
+        <a href="https://www.facebook.com/MobileLegendsGameES" target="_blank" class="icono-redes"><i class='bx bxl-facebook' ></i></a>
+        <a href="https://twitter.com/MobileLegendsOL" target="_blank" class="icono-redes"><i class='bx bxl-twitter' ></i></a>
+        <a href="https://www.instagram.com/mobilelegendsgame/" target="_blank" class="icono-redes"><i class='bx bxl-instagram' ></i></a>
+        <a href="https://www.tiktok.com/@mlbbttofficial?lang=en" target="_blank" class="icono-redes"><i class='bx bxl-tiktok' ></i></a>
+        <a href="https://m.mobilelegends.com/en" class="icono-redes"><i class='bx bx-globe'></i></a>
     </div>
-    <div class="footer-bottom">
-        <p>Pagina sin fines de lucro</p>
-        <p>copyright &copy;2023 designed by <span>Virginia Nardi</span></p>
-    </div>
+    <span class="copyright">&copy;2023. VirginiaNardi. Pagina sin fines de lucro</span>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script> 
 </body>
