--- a/pages/middle.html
+++ b/pages/middle.html
@@ -128,20 +128,15 @@
 
     <!-- FOOTER -->
     <footer>
-        <div class="footer-content">
-            <h3>MOBILE LEGENDS</h3>
-            <ul class="social">
-                <li><a href="https://www.facebook.com/MobileLegendsGameES" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="https://twitter.com/MobileLegendsOL" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="https://www.instagram.com/mobilelegendsgame/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://www.tiktok.com/@mlbbttofficial?lang=en" target="_blank"><i class="fab fa-tiktok"></i></a></li>
-                <li><a href="https://m.mobilelegends.com/en" target="_blank"><i class="fa-solid fa-globe"></i></a></li>
-            </ul>
+        <h3 class="juego"><a href="./middle.html">MOBILE LEGENDS</a></h3>
+        <div class="contenedor-redes">
+            <a href="https://www.facebook.com/MobileLegendsGameES" target="_blank" class="icono-redes"><i class='bx bxl-facebook' ></i></a>
+            <a href="https://twitter.com/MobileLegendsOL" target="_blank" class="icono-redes"><i class='bx bxl-twitter' ></i></a>
+            <a href="https://www.instagram.com/mobilelegendsgame/" target="_blank" class="icono-redes"><i class='bx bxl-instagram' ></i></a>
+            <a href="https://www.tiktok.com/@mlbbttofficial?lang=en" target="_blank" class="icono-redes"><i class='bx bxl-tiktok' ></i></a>
+            <a href="https://m.mobilelegends.com/en" class="icono-redes"><i class='bx bx-globe'></i></a>
         </div>
-        <div class="footer-bottom">
-            <p>Pagina sin fines de lucro</p>
-            <p>copyright &copy;2023 designed by <span>Virginia Nardi</span></p>
-        </div>
+        <span class="copyright">&copy;2023. VirginiaNardi. Pagina sin fines de lucro</span>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script> 
 </body>
