arreglando mas rutas

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                     <img src="./media/pharsa.jpg" alt="">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src=./media/phoveus.jpg" alt="">
+                    <img src="./media/phoveus.jpg">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
                     <img src="./media/popol-y-kupa.jpg" alt="">
@@ -418,7 +418,7 @@
                     <img src="./media/yu-zhong.jpg" alt="">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src=./media/yve.jpg" alt="">
+                    <img src="./media/yve.jpg" alt="">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
                     <img src="./media/zhask.jpg" alt="">
